force-app/main/default/objects/Model__c/fields/Dataset__c.field-meta.xml
<CustomField>
    <fullName>Dataset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset</label>
    <referenceTo>Dataset__c</referenceTo>
    <relationshipLabel>Models</relationshipLabel>
    <relationshipName>Models</relationshipName>
    <type>Lookup</type>
</CustomField>