force-app/main/default/objects/Model__c/fields/Dataset_Id__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Id__c</fullName>
    <label>Dataset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>