force-app/main/default/objects/Model__c/fields/parentModel__c.field-meta.xml
<CustomField>
    <fullName>parentModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Models</relationshipLabel>
    <relationshipName>Models</relationshipName>
    <type>Lookup</type>
</CustomField>